--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -170,3 +170,18 @@ header button.btn-order {
   position: relative;
   top: -2px;
 }
+
+header input {
+  border-top: 0;
+  border-right: 0;
+  border-left: 0;
+  border-bottom: 1px #cccccc solid;
+}
+
+header input,
+header input::placeholder {
+  font-size: 14px;
+  color: #bdbdbd;
+  font-weight: 400;
+  font-family: "Open Sans";
+}
